DMPlex for Navier-Stokes/Advection in 2D and 3D
Currently uses synthetic "box" meshes, but is entirely unstructured
semantically so you can read any mesh that DMPlex supports.

Add -problem advection2d with basic (for now) advection scheme.  This
is intended to become a testbed for stabilization techniques.

  ./nsplex -ts_monitor -petscspace_degree 2 -dm_plex_box_faces 30,30 -ts_adapt_dt_max .1 -ts_max_time 6 -problem advection2d -dm_view

--- a/examples/navier-stokes/Makefile
+++ b/examples/navier-stokes/Makefile
@@ -32,6 +32,7 @@ navierstokes := $(navierstokes.c:%.c=%)
 
 all: $(navierstokes)
 $(navierstokes): | $(PETSc.pc) $(ceed.pc)
+nsplex: | $(PETSc.pc) $(ceed.pc)
 
 # Rules for building the example
 %: %.c
