--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ addons:
     - liblapack-dev
     - libopenblas-dev
     - valgrind-dbg
+    - lcov
   homebrew:
     packages:
     - ccache
@@ -72,6 +73,7 @@ script:
     fi
 
 after_success:
+  - lcov --directory . --capture --output-file coverage.info
   - bash <(curl -s https://codecov.io/bash) -F interface
   - bash <(curl -s https://codecov.io/bash) -F backends
   - bash <(curl -s https://codecov.io/bash) -F tests
