--- a/.travis.yml
+++ b/.travis.yml
@@ -73,11 +73,13 @@ script:
     fi
 
 after_success:
-  - lcov --directory . --capture --output-file coverage.info
-  - bash <(curl -s https://codecov.io/bash) -F interface
-  - bash <(curl -s https://codecov.io/bash) -F backends
-  - bash <(curl -s https://codecov.io/bash) -F tests
-  - bash <(curl -s https://codecov.io/bash) -F examples
+  - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then
+        lcov --directory . --capture --output-file coverage.info
+        && bash <(curl -s https://codecov.io/bash) -F interface
+        && bash <(curl -s https://codecov.io/bash) -F backends
+        && bash <(curl -s https://codecov.io/bash) -F tests
+        && bash <(curl -s https://codecov.io/bash) -F examples;
+    fi
 
 cache:
   ccache: true
