--- a/.travis.yml
+++ b/.travis.yml
@@ -73,12 +73,12 @@ script:
     fi
 
 after_success:
-  - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         lcov --directory . --capture --output-file coverage.info
-        && bash <(curl -s https://codecov.io/bash) -F interface
-        && bash <(curl -s https://codecov.io/bash) -F backends
-        && bash <(curl -s https://codecov.io/bash) -F tests
-        && bash <(curl -s https://codecov.io/bash) -F examples;
+        && bash <(curl -s https://codecov.io/bash) -f coverage.info -F interface
+        && bash <(curl -s https://codecov.io/bash) -f coverage.info -F backends
+        && bash <(curl -s https://codecov.io/bash) -f coverage.info -F tests
+        && bash <(curl -s https://codecov.io/bash) -f coverage.info -F examples;
     fi
 
 cache:
