--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ addons:
     - openblas
 
 env:
-  - FC=gfortran PETSC_VER=73f49a0
+  - FC=gfortran
 
 install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
@@ -54,12 +54,11 @@ install:
   - cd Nek5000/tools && ./maketools genbox genmap reatore2 && cd ../..;
   - export NEK5K_DIR=$PWD/Nek5000 PATH=$PWD/Nek5000/bin:$PATH MPI=0;
 # PETSc
-  - export PETSC_INSTALL=$HOME/install/petsc-$PETSC_VER
+  - export PETSC_INSTALL=$HOME/install/petsc-3.12.0
   - test -s "$PETSC_INSTALL/lib/pkgconfig/PETSc.pc"
-        || ( rm -rf $HOME/install/petsc*
-        && git clone https://github.com/petsc/petsc.git
-        && cd petsc
-        && git reset --hard $PETSC_VER
+        || (  curl -O http://ftp.mcs.anl.gov/pub/petsc/release-snapshots/petsc-lite-3.12.0.tar.gz
+        && tar xf petsc-lite-3.12.0.tar.gz
+        && cd petsc-3.12.0
         && ./configure --with-debugging=0 COPTFLAGS=-O --with-mpi=0 --with-fc=0 --with-cxx=0 --prefix=$PETSC_INSTALL
         && make
         && make install )
