Codecov - cover gallery

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -20,6 +20,9 @@ flags:
   interface:
     paths:
       - interface/
+  gallery:
+    paths:
+      - gallery/
   backends:
     paths:
       - backends/
