--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,7 @@ after_success:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         lcov --directory . --capture --output-file coverage.info
         && bash <(curl -s https://codecov.io/bash) -f coverage.info -F interface
+        && bash <(curl -s https://codecov.io/bash) -f coverage.info -F gallery
         && bash <(curl -s https://codecov.io/bash) -f coverage.info -F backends
         && bash <(curl -s https://codecov.io/bash) -f coverage.info -F tests
         && bash <(curl -s https://codecov.io/bash) -f coverage.info -F examples;
