Add directory separator to examples/petsc/.gitignore

--- a/examples/petsc/.gitignore
+++ b/examples/petsc/.gitignore
@@ -1,10 +1,10 @@
 *.vtk
 *.vtu
-area
-petsc-area
-bps
-petsc-bps
-bpsraw
-petsc-bpsraw
-multigrid
-petsc-multigrid
+/area
+/petsc-area
+/bps
+/petsc-bps
+/bpsraw
+/petsc-bpsraw
+/multigrid
+/petsc-multigrid
