Travis - add Python to test matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,20 @@ jobs:
 env:
   - FC=gfortran
 
+matrix:
+  include:
+    - language: python
+      dist: xenial
+      python: 3.8
+      install:
+        - pip install -r requirements.txt
+      script:
+        - python setup.py build install
+        - cd tests/python
+        - python setup-qfunctions.py build
+        - pytest test-*.py --ceed /cpu/self/ref/serial -vv
+      after_success: skip
+
 install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         export PATH="/usr/local/opt/ccache/libexec:$PATH"
