Travis: use PETSc from master

--- a/.travis.yml
+++ b/.travis.yml
@@ -84,11 +84,13 @@ install:
   - cd Nek5000/tools && ./maketools genbox genmap reatore2 && cd ../..;
   - export NEK5K_DIR=$PWD/Nek5000 PATH=$PWD/Nek5000/bin:$PATH MPI=0;
 # PETSc
-  - export PETSC_INSTALL=$HOME/install/petsc-3.12.0
+  - PETSC_COMMIT=7b0709de4e8bbc57c48540e4a67f216f8a309ed6 # master 2020-02-19
+  - export PETSC_INSTALL=$HOME/install/petsc-$PETSC_COMMIT
   - test -s "$PETSC_INSTALL/lib/pkgconfig/PETSc.pc"
-        || (  curl -O http://ftp.mcs.anl.gov/pub/petsc/release-snapshots/petsc-lite-3.12.0.tar.gz
-        && tar xf petsc-lite-3.12.0.tar.gz
-        && cd petsc-3.12.0
+        || (  curl -O https://gitlab.com/petsc/petsc/-/archive/$PETSC_COMMIT/petsc-$PETSC_COMMIT.tar.gz
+        && rm -rf $HOME/install/petsc*
+        && tar xf petsc-$PETSC_COMMIT.tar.gz
+        && cd petsc-$PETSC_COMMIT
         && ./configure --with-debugging=0 COPTFLAGS=-O --with-mpi=0 --with-fc=0 --with-cxx=0 --prefix=$PETSC_INSTALL
         && make
         && make install )
