doc: convert to Sphinx documentation at libceed.readthedocs.io
Some technical notes about the expanded docs/process:

* Doxygen is now restricted to API documentation.  Sphinx docs are
  incomplete surrogates due to not hyperlinking code listings, though
  we hope the Doxygen site can be removed eventually.

* PDF output uses XeTeX (unicode and OTF fonts) with TeX Gyre Pagella
  and DejaVu Sans Mono.  You may need to install these fonts in order
  to build the PDF users manual.

* Obtaining the author list from Git has not worked on
  ReadTheDocs (`git shortlog` is empty even though `git log` is not),
  so we automatically generate it on developer machines with `make
  doc`.  If the author information is incorrect/mangled, edit .mailmap
  to fix the mapping.

* Math semantics are based on the description here
  https://github.com/sphinx-doc/sphinx/issues/3785

    Sphinx chooses one of two setups for the maths.

      * If there is a single equation, then we wrap the maths in
        \begin{equation*} (or equation).

      * If there are multiple equations (as determined by the presence of
        an empty line), then we wrap the maths first in \begin{aligned}
        and then in \begin{align*} (or align).

Co-authored-by: Jeremy L. Thompson <jeremy.thompson@colorado.edu>
Co-authored-by: Jed Brown <jed@jedbrown.org>

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@ build/*
 *.so
 *.d
 *.DIR
-doc/html
 ceed.pc
 config.mk
 
@@ -32,8 +31,20 @@ dist
 *cffi.so
 *cffi.dylib
 
+# Documentation
+xml/*
+doc/html
+doc/sphinx/build/
+
 # Editor Misc
 .history
 .vscode
 .ccls-cache
 .vim
+libCEED.cflags
+libCEED.config
+libCEED.creator
+libCEED.creator.*
+libCEED.cxxflags
+libCEED.files
+libCEED.includes
