doc: split examples into separate files in the source tree
* Copy examples/**.rst into the source directory so they can be picked
  up by Sphinx.
* Some minor corrections/clarifications to docs that I noticed while
  splitting them apart (shame on me for bundling in this commit).

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ dist
 xml/*
 doc/html
 doc/sphinx/build/
+# Example docs automatically copied from source tree
+doc/sphinx/source/examples/
 
 # Editor Misc
 .history
