Travis - add make style check

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ addons:
     - libopenblas-dev
     - valgrind-dbg
     - lcov
+    - astyle
   homebrew:
     packages:
     - ccache
@@ -105,6 +106,9 @@ script:
   - make -j2 prove-all PROVE_OPTS=-v
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$TRAVIS_CPU_ARCH" == "amd64" ]]; then
         clang-tidy --version && make -j2 tidy;
+    fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" && "$TRAVIS_CPU_ARCH" == "amd64" ]]; then
+        make style && git diff --exit-code;
     fi
 
 after_success:
