doc: switch from mathjax to katex

--- a/doc/sphinx/requirements.txt
+++ b/doc/sphinx/requirements.txt
@@ -3,6 +3,7 @@ breathe
 recommonmark
 sphinx_rtd_theme
 sphinxcontrib-bibtex
+sphinxcontrib-katex
 sphinxcontrib-mermaid
 sphinxcontrib-svg2pdfconverter
 sphinx-hoverxref
