make: support CEED_LDFLAGS for things like -dynamic on Cray

--- a/examples/fluids/Makefile
+++ b/examples/fluids/Makefile
@@ -33,7 +33,7 @@ $(navierstokes): | $(PETSc.pc) $(ceed.pc)
 
 # Rules for building the example
 %: %.c
-	$(CC) $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) $(abspath $<) -o $@ $(LDLIBS)
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) $(CEED_LDFLAGS) $(abspath $<) -o $@ $(LDLIBS)
 
 print: $(PETSc.pc) $(ceed.pc)
 	$(info CC      : $(CC))
