--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,6 @@
 # https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
 requires = ["setuptools>=40.8.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.autopep8]
+max_line_length = 80
