--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,6 +6,7 @@ version: 2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
+  builder: dirhtml
   configuration: doc/sphinx/source/conf.py
 
 # Optionally build your docs in additional formats such as PDF and ePub
