Solids - add vtu files to make clean

--- a/examples/solids/Makefile
+++ b/examples/solids/Makefile
@@ -79,7 +79,7 @@ print: $(PETSc.pc) $(ceed.pc)
 	@true
 
 clean:
-	$(RM) -r $(OBJDIR) elasticity
+	$(RM) -r $(OBJDIR) elasticity *.vtu
 
 $(PETSc.pc):
 	$(if $(wildcard $@),,$(error \
