--- a/.travis.yml
+++ b/.travis.yml
@@ -115,7 +115,7 @@ script:
     fi
 
 after_success:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" && "$TRAVIS_CPU_ARCH" == "amd64" ]]; then
+  - if [[ "$CC" == "gcc" && "$TRAVIS_OS_NAME" == "linux" && "$TRAVIS_CPU_ARCH" == "amd64" ]]; then
         lcov --directory . --capture --output-file coverage.info
         && bash <(curl -s https://codecov.io/bash) -f coverage.info -F interface
         && bash <(curl -s https://codecov.io/bash) -f coverage.info -F gallery
