--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: c
 
-dist: bionic
-
-osx_image: xcode11.2
-
 addons:
   apt:
     update: true
@@ -23,41 +19,54 @@ addons:
 
 matrix:
   include:
+# Linux GCC + Codecov
    - name: "Linux GCC + CodeCov"
      os: linux
+     dist: bionic
      arch: amd64
      compiler: gcc
      env: FC=gfortran
+# Linux Clang + Tidy and Style
    - name: "Linux Clang + Tidy and Style"
      os: linux
+     dist: bionic
      arch: amd64
      compiler: clang
      env: FC=gfortran
+# OSX GCC
    - name: "OSX GCC"
      os: osx
+     osx_image: xcode11.2
      arch: amd64
      compiler: gcc
      env: FC=gfortran
+# OSX Clang
    - name: "OSX Clang"
      os: osx
+     osx_image: xcode11.2
      arch: amd64
      compiler: clang
      env: FC=gfortran
+# IBM Power
    - name: "IBM Power"
      os: linux
+     dist: bionic
      arch: ppc64le
      compiler: gcc
      env: FC=gfortran
+# ARM
    - name: "ARM"
      os: linux
+     dist: bionic
      arch: arm64
      compiler: gcc
      env: FC=gfortran
+# Python
    - name: "Python"
      language: python
-     arch: amd64
      os: linux
-     dist: xenial
+     dist: bionic
+     arch: amd64
      compiler: gcc
      python: 3.8
      install:
