doc: activate hoverxref after RTD update

--- a/doc/sphinx/requirements.txt
+++ b/doc/sphinx/requirements.txt
@@ -6,5 +6,5 @@ sphinxcontrib-bibtex
 sphinxcontrib-katex
 sphinxcontrib-mermaid
 sphinxcontrib-svg2pdfconverter
-# git+https://github.com/readthedocs/sphinx-hoverxref@master#egg=sphinx-hoverxref==0.1b-master
+sphinx-hoverxref>=0.3b1
 sphinx-markdown-tables
