Azure - add make info

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,9 @@ container: jedbrown/petsc-root:latest
 
 steps:
 - script: |
+    make info
+  displayName: 'make info'
+- script: |
     make
   displayName: 'make'
 - script: |
