--- a/.travis.yml
+++ b/.travis.yml
@@ -124,11 +124,9 @@ install:
         export PATH="/usr/local/opt/ccache/libexec:$PATH"
         && brew link --overwrite gcc;
     fi
-# OCCA (pinned before OCCA changed destructor syntax)
-# Note: OCCA currently intermittantly failing on ARM and IBM
-  - if [[ "$TRAVIS_CPU_ARCH" == "amd64" ]]; then
-        git clone https://github.com/libocca/occa.git
-        && cd occa && git reset --hard 327badb && cd ..
+# OCCA v1.1.0
+# TODO(dmed256): Use a specific commit/tag (cd occa && git reset --hard [COMMITISH] && cd ..)
+  - git clone https://github.com/libocca/occa.git
         && make -C occa -j2
         && export OCCA_DIR=$PWD/occa;
     fi
