Travis - used pinned Nek5000 as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -110,7 +110,7 @@ install:
         export PATH="/usr/local/opt/ccache/libexec:$PATH"
         && brew link --overwrite gcc;
     fi
-# OCCA
+# OCCA (pinned before OCCA changed destructor syntax)
   - git clone https://github.com/libocca/occa.git
         && cd occa && git reset --hard 327badb && cd ..
         && make -C occa -j2
@@ -123,13 +123,14 @@ install:
         && export XSMM_DIR=$PWD/libxsmm;
     fi
 # MFEM
-  - git clone --depth 1 https://github.com/mfem/mfem.git;
-  - make -C mfem -j2 serial CXXFLAGS="-O -std=c++11" MFEM_USE_SIMD=${MFEM_USE_SIMD}
-  - export MFEM_DIR=$PWD/mfem
-# Nek5k
-  - git clone --depth 1 https://github.com/Nek5000/Nek5000.git;
-  - cd Nek5000/tools && ./maketools genbox genmap reatore2 && cd ../..;
-  - export NEK5K_DIR=$PWD/Nek5000 PATH=$PWD/Nek5000/bin:$PATH MPI=0;
+  - git clone --depth 1 https://github.com/mfem/mfem.git
+        && make -C mfem -j2 serial CXXFLAGS="-O -std=c++11" MFEM_USE_SIMD=${MFEM_USE_SIMD}
+        && export MFEM_DIR=$PWD/mfem
+# Nek5k (pinned before Nek partially updated MPI_Type_extent)
+  - git clone https://github.com/Nek5000/Nek5000.git
+        && cd Nek5000 && git reset --hard 6f5c7eb && cd ..
+        && cd Nek5000/tools && ./maketools genbox genmap reatore2 && cd ../..
+        && export NEK5K_DIR=$PWD/Nek5000 PATH=$PWD/Nek5000/bin:$PATH MPI=0;
 # PETSc
   - PETSC_COMMIT=afc36f2e62dc81f9d8cae345c2c65c61f89b0500 # master 2020-05-13
   - export PETSC_INSTALL=$HOME/install/petsc-$PETSC_COMMIT
