--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,7 @@ jobs:
      dist: bionic
      arch: amd64
      compiler: gcc
-     python: 3.8
+     python: 3.8-dev
      install:
        - pip install -r requirements.txt
        - pip install -r requirements-test.txt
