--- a/.codecov.yml
+++ b/.codecov.yml
@@ -4,6 +4,9 @@ codecov:
 fixes:
   - "build/backends/::backends/"
 
+# CodeCov shows up in the checks on GitHub pull requests
+comment: false
+
 coverage:
   status:
     project:
