--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ noether-rocm:
   image: jedbrown/rocm:latest
   script:
     - make info
+    - export COVERAGE=1
     - make -j$(nproc)
     - echo '[{"subject":"/","metrics":[{"name":"Transfer Size (KB)","value":"19.5","desiredSize":"smaller"},{"name":"Speed Index","value":0,"desiredSize":"smaller"},{"name":"Total Score","value":92,"desiredSize":"larger"},{"name":"Requests","value":4,"desiredSize":"smaller"}]}]' > performance.json
     - make -k -j$(nproc) junit realsearch=%
@@ -17,3 +18,10 @@ noether-rocm:
     reports:
       junit: build/*.junit
       performance: performance.json
+  after_success:
+    - lcov --directory . --capture --output-file coverage.info
+      && bash <(curl -s https://codecov.io/bash) -f coverage.info -F interface
+      && bash <(curl -s https://codecov.io/bash) -f coverage.info -F gallery
+      && bash <(curl -s https://codecov.io/bash) -f coverage.info -F backends
+      && bash <(curl -s https://codecov.io/bash) -f coverage.info -F tests
+      && bash <(curl -s https://codecov.io/bash) -f coverage.info -F examples;
